--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
           class="button"
         />
 
-        <section class="hidden image-results"></section>
+        <section class="hidden image-results">
+          <h2>
+            Here are the dog pictures you requested!
+          </h2>
+        </section>
       </form>
     </main>
     <script
